--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "TeachAssist",
     "slug": "teachassist",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/playstore-icon.png",
     "scheme": "teachassist",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -22,7 +22,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/transparent_ta_icon.png"
+      "favicon": "./assets/images/playstore-icon.png"
     },
     "plugins": [
       "expo-router",
