--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.4.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
