Revert "this better work"
This reverts commit a8d264295abdf8d73194119a695799a8fde90dd2.

--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,7 @@
       "channel": "preview",
       "autoIncrement": true,
       "android": {
-            "buildType": "apk"
+            "buildType": "app-bundle"
           }
     },
     "production": {
