--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "react-native": "0.79.5",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-progress-bar-horizontal": "^1.0.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
