feat: can see teacher comments, added decimal grade support, fixed grades displaying weirdly, bug fixes

--- a/eas.json
+++ b/eas.json
@@ -13,10 +13,12 @@
           }
     },
     "production": {
-      
       "distribution": "store",
       "channel": "production",
-      "autoIncrement": true
+      "autoIncrement": true,
+      "android": {
+            "buildType": "app-bundle"
+          }
     }
   },
   "submit": {
