--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "TeachAssist",
     "slug": "teachassist",
-    "version": "1.2.2",
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/images/playstore-icon-transparent.png",
     "scheme": "teachassist",
@@ -18,6 +18,10 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.prmntr.teachassist"
+    },
+    "notification": {
+      "icon": "./assets/images/teach-icon-transparent.png",
+      "color": "#27b1fa"
     },
     "web": {
       "bundler": "metro",
@@ -35,7 +39,10 @@
           "backgroundColor": "#161616"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-notifications",
+      "expo-background-task",
+      "expo-video"
     ],
     "experiments": {
       "typedRoutes": true
