--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shopify/react-native-skia": "^2.4.14",
     "axios": "^1.11.0",
     "expo": "^54",
+    "expo-background-task": "~1.0.0",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.11",
     "expo-font": "~14.0.10",
@@ -30,12 +31,16 @@
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
+    "expo-local-authentication": "~17.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.18",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-task-manager": "~14.0.9",
     "expo-updates": "~29.0.15",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
     "htmlparser2": "^10.0.0",
     "nativewind": "^4.1.23",
@@ -44,6 +49,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-async-storage": "^0.0.1",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.64",
     "react-native-progress-wheel": "^2.1.0",
