--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
     "name": "TeachAssist",
     "slug": "teachassist",
-    "version": "1.3.1",
-    "orientation": "portrait",
+    "version": "1.3.2",
+    "orientation": "default",
     "icon": "./assets/images/playstore-icon-transparent.png",
     "scheme": "teachassist",
     "userInterfaceStyle": "automatic",
