--- a/app.json
+++ b/app.json
@@ -2,14 +2,19 @@
   "expo": {
     "name": "TeachAssist",
     "slug": "teachassist",
-    "version": "1.3.2",
+    "version": "1.3.4",
     "orientation": "default",
     "icon": "./assets/images/playstore-icon-transparent.png",
     "scheme": "teachassist",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.prmntr.teachassistapp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      },
+      "icon": "./assets/images/teachassist-ios-icon.png"
     },
     "android": {
       "adaptiveIcon": {
