--- a/eas.json
+++ b/eas.json
@@ -2,23 +2,26 @@
   "build": {
     "development": {
       "distribution": "internal",
-      "channel": "development"
+      "channel": "development",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
       "distribution": "internal",
       "channel": "preview",
       "autoIncrement": true,
       "android": {
-            "buildType": "apk"
-          }
+        "buildType": "apk"
+      }
     },
     "production": {
       "distribution": "store",
       "channel": "production",
       "autoIncrement": true,
       "android": {
-            "buildType": "app-bundle"
-          }
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
